# CC1PiProject

./: .gitignore  CMakeLists.txt  Includes.h  Utils.cpp
Classes/: CaloPoint.cpp  CaloPoint.h  Chi2.cpp  Chi2.h  Cut_Parameters.cpp  Cut_Parameters.h  G4Particle.cpp  G4Particle.h  GeneratorParticle.cpp  GeneratorParticle.h  Hit.cpp  Hit.h  Particle.cpp  Particle.h  Razzled.cpp  Razzled.h  RecoParticle.cpp  RecoParticle.h  RecoVertexWire.cpp  RecoVertexWire.h  Slice.cpp  Slice.h  SpacePoint.cpp  SpacePoint.h  Structures.h  TrueInteraction.cpp  TrueInteraction.h  Vertex.cpp  Vertex.h  dQdxSegmentInfo.cpp  dQdxSegmentInfo.h
Classes/RecoAlgorithms/: Cluster.cpp  Cluster.h  DBSCAN.cpp  DBSCAN.h  HoughAlgorithm.cpp  HoughAlgorithm.h  HoughLine.cpp  HoughLine.h  LineEquation.cpp  LineEquation.h  ReducedVertexWire.cpp  ReducedVertexWire.h  RefinedSlice.cpp  RefinedSlice.h  SPoint.cpp  SPoint.h  TPCPlot.cpp  TPCPlot.h  reco_config.h
RecoStudies/: FinalVariablesProducer_old_SM.C  event_display.C  tree_utils.cpp
RecoStudies/Chi2_stuff/: Chi2_existance_graphs.C  chi2_confusion.C  chi2_confusion_only_mu_score.C  chi2_p_mu_tl_cuts.C  chi2_to_tl.C
RecoStudies/FinalBackground/: new_background_composition.C  old_background_composition.C  old_background_composition_quick.C  remaining_background_p_energy.C
RecoStudies/MissRec/: Changes_in_MissReconstruction.C  Energy_comp.C  Extrap_distance_distribution.C  Graphs_utils.cpp  Lost_Recovered_dependance_w_TL_dtv.C  MissReconstructionClassifier.C  MissReconstructionClassifier_Reorganized.C  MissReconstructionClassifier_after_new_cuts.C  TL_missing_graphs.C  min_TL_dtov_TH2D.C
RecoStudies/MissRec/2DReco/: PlotEvent.C  (+3 more)
RecoStudies/MuPiDiff/: mupi_differentiation.C
RecoStudies/TrackPurCom/: TL_impact_on_energy_spectrum.C  TL_impact_on_number_events.C  pur_comp_study.C
RecoStudies/proton_study/: Chi2_PID_p_study.C  Razzled_PID_p_study.C
RecoStudies/selection_graphs/: new_graphs_producer.C  old_graphs_producer.C  old_selection_graph_quick.C  pur_eff_bar_graph.C
RecoStudies/shower_study/: cc1pi_discrimination_photon_study_new.C  distance_test.C  miss_identified_shower_study.C  passing_pi0_energy.C  pho_e_discrimination_study.C  shower_definition_cuts.C  shower_study_cc1pi.C  shower_study_tl_e_razzled_score.C
TreeManagementCode/: make_class_tree.C  read_tree.C  tree_utils.cpp
TrueStudies/: CC1PiOldComp.C  Double_diff_xsec.C  ExtraPCC1Pi_plot.C  HNLMakeDecay_tool.cc  Interaction_final_state_plot.C  MultiTH1_utils.cpp  Resonance_plot.C  Resonance_utils.cpp  TL_dependance_with_energy.C  scp.sh
(+4 files in other folders)
